--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,6 @@ tauri-plugin-shell = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
+
+[dev-dependencies]
+mockito = "1.7.2"
