test: trigger ci/cd on Yuvan branch and clean up artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Release
 on:
   push:
+    branches:
+      - Yuvan
     tags:
       - 'v*' # Triggers whenever you push a tag starting with 'v' (e.g., v1.0.0)
 
