--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,16 @@ tauri-plugin-shell = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
+# Google OAuth dependencies
+axum = { version = "0.7", features = ["tokio"] }
+tower = "0.4"
+jsonwebtoken = "9.2"
+base64 = "0.21"
+rand = "0.8"
+keyring = "2.3"
+url = "2.5"
+lazy_static = "1.4"
+urlencoding = "2.1"
 
 [dev-dependencies]
 mockito = "1.7.2"
