--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4"
 tauri = { version = "2.10.0", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-shell = "2"
+tauri-plugin-opener = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
