--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: Release
 on:
   push:
-    branches:
-      - Yuvan
     tags:
       - 'v*' # Triggers whenever you push a tag starting with 'v' (e.g., v1.0.0)
 
@@ -31,7 +29,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libayatana-appindicator3-dev librsvg2-dev build-essential curl wget file libssl-dev pkg-config
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev patchelf
 
       - name: Install frontend dependencies
         run: bun install
@@ -42,6 +40,6 @@ jobs:
         with:
           tagName: v__VERSION__ # This will be replaced by the tauri-action automatically
           releaseName: "CosmoNaut v__VERSION__"
-          releaseBody: "See the assets, to download the latest version."
-          releaseDraft: true
+          releaseBody: "See the assets to download the latest version."
+          releaseDraft: false
           prerelease: false
