consolidate website and setup cloud release automation

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -9,8 +9,7 @@
     ],
     "routes": [
         {
-            "src": "/odyssey/(.*)",
-            "dest": "/odyssey/$1"
+            "handle": "filesystem"
         },
         {
             "src": "/(.*)",
