--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "bunx next build",
     "start": "bunx next start",
     "lint": "bunx eslint",
+    "test": "vitest run",
     "tauri": "bunx tauri"
   },
   "dependencies": {
