--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "software_project",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "dev": "bunx next dev",
@@ -19,7 +19,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
     "resend": "^6.9.2"
   },
   "devDependencies": {
