--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "bunx next build",
     "start": "bunx next start",
     "lint": "bunx eslint",
-    "tauri": "bunx tauri",
+    "tauri": "tauri",
     "test": "vitest run"
   },
   "dependencies": {
@@ -31,10 +31,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "jsdom": "^28.0.0",
+    "react-syntax-highlighter": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
